<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_picture"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">

        <Button android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:background="#494754"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="toSearchActivity"
            android:text="@string/search_pokemon_button"
            />
        <Button android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="#494754"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/random_pokemon_button"
            />
    </LinearLayout>
</RelativeLayout>